<resources>
    <string name="app_name">Digi Check</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_scanbutton">Start Scan</string>
    <string name="main_textfield">Scan QR or Enter Aadhaar</string>
    <string name="main_searchbutton">Search Details</string>
    <string name="title_activity_vehicle_profile">VehicleProfile</string>
    <string name="vplbl_aadhar">Aadhaar Number</string>
    <string name="vplbl_vehiclelist">List of vehicles associated with this Aadhaar</string>
    <string name="vs_rc">Registration Certificate</string>
    <string name="vs_pc">Pollution Certificate</string>
    <string name="vs_ic">Insurance</string>
    <string name="vs_activitytitle">Vehicle Summary</string>
    <string name="bd_maker">Maker Class</string>
    <string name="bd_type">Vehicle Class</string>
    <string name="bd_chasis">Chasis Number</string>
    <string name="bd_engine">Engine Number</string>
    <string name="bd_ftype">Fuel Used</string>
    <string name="bd_cc">Cubic Capacity</string>
    <string name="bd_wb">Wheel Base</string>
    <string name="bd_weight">Unladen Weight</string>
    <string name="bd_color">Color</string>
    <string name="vs_bd">Bike Details</string>
    <string name="rc_title">Registration Certificate</string>
    <string name="rc_subtitle1">State Transport Department</string>
    <string name="rc_regno">Vehicle Registration Number</string>
    <string name="rc_dor">Date of Registration</string>
    <string name="rc_eor">Registration valid upto</string>
    <string name="rc_tax">Tax Paid</string>
    <string name="pc_title">Pollution Certificate</string>
    <string name="pc_regno">Registration number</string>
    <string name="pc_pts">PTS License Number</string>
    <string name="pc_eor">Valid upto</string>
    <string name="pc_testtitle">Test Result</string>
    <string name="pc_reg">Regulation</string>
    <string name="pc_act">Actual</string>
    <string name="pc_co">CO</string>
    <string name="pc_hc">HC</string>
    <string name="ic_title">Insurance Certificate</string>
    <string name="ic_regno">Registration number</string>
    <string name="ic_policy">Policy number</string>
    <string name="ic_dor">Date of issue</string>
    <string name="ic_eor">Date of expiry</string>
    <string name="ss_auth">Authenticate</string>
    <string name="ss_cal">Enter DOB in "YYYYMMDD" format</string>
    <string name="main2_userbtn">Regular User</string>
    <string name="main2_copbtn">Traffic Cop</string>
    <string name="main2_text">Select who you are to proceed</string>
    <string name="title_activity_vehicle_summary">VehicleSummary</string>
    <string name="title_activity_bike_details">BikeDetails</string>
    <string name="title_activity_registration_certificate">RegistrationCertificate</string>
    <string name="title_activity_pollution_certificate">PollutionCertificate</string>
    <string name="title_activity_insurance_certificate">InsuranceCertificate</string>
    <string name="title_activity_mainactivity2">Mainactivity2</string>
    <string name="title_activity_self_service">SelfService</string>
</resources>
