<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="com.example.kishan.digicheck3.RegistrationCertificate">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rc_title"
        android:text="@string/rc_title"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rc_subtitle"
        android:text="@string/rc_subtitle1"
        android:layout_below="@+id/rc_title"
        android:layout_marginTop="10dp"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:stretchColumns="2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rc_subtitle">

        <TableRow>
            <TextView android:layout_weight=".5"
                android:textSize="15dp"
                android:text="@string/rc_regno"/>
            <TextView android:id="@+id/rc_regno"/>
        </TableRow>
        <TableRow android:layout_marginTop="5dp">
            <TextView android:layout_weight=".5"
                android:textSize="15dp"
                android:text="@string/rc_dor"/>
            <TextView android:id="@+id/rc_dor"/>
        </TableRow>
        <TableRow android:layout_marginTop="5dp">
            <TextView android:layout_weight=".5"
                android:textSize="15dp"
                android:text="@string/rc_eor"/>
            <TextView android:id="@+id/rc_eor"/>
        </TableRow>
        <TableRow android:layout_marginTop="5dp">
            <TextView android:layout_weight=".5"
                android:textSize="15dp"
                android:text="@string/rc_tax"/>
            <TextView android:id="@+id/rc_tax"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>
