<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="com.example.kishan.digicheck3.InsuranceCertificate">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ic_title"
        android:text="@string/ic_title"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"/>

    <TableLayout
        android:id="@+id/ic_maintable"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:stretchColumns="2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ic_title">

        <TableRow>
            <TextView android:layout_weight=".5"
                android:textSize="15dp"
                android:text="@string/ic_regno"/>
            <TextView android:id="@+id/ic_regno"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_weight=".5"
                android:textSize="15dp"
                android:text="@string/ic_policy"/>
            <TextView android:id="@+id/ic_policy"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_weight=".5"
                android:textSize="15dp"
                android:text="@string/ic_dor"/>
            <TextView android:id="@+id/ic_dor"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_weight=".5"
                android:textSize="15dp"
                android:text="@string/ic_eor"/>
            <TextView android:id="@+id/ic_eor"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>
