<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="com.example.kishan.digicheck3.SelfService">

    <ImageView
        android:id="@+id/ss_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/app_title"/>

    <Button
        android:id="@+id/ss_scanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ss_title"
        android:text="@string/main_scanbutton"
        android:layout_marginTop="20px"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ss_aaduid"
        android:layout_below="@+id/ss_scanBtn"
        android:hint="@string/main_textfield"
        android:layout_centerHorizontal="true"
        android:textAlignment="gravity"
        android:gravity="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ss_dob"
        android:hint="@string/ss_cal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ss_aaduid"
        android:layout_marginTop="5dp"
        android:textAlignment="gravity"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ss_dob"
        android:id="@+id/ss_auth"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/ss_auth"/>
</RelativeLayout>
