<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="com.example.kishan.digicheck3.VehicleSummary">

    <TextView
        android:id="@+id/vs_activitytitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs_activitytitle"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"/>

    <TextView android:id="@+id/vs_ownername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/vs_activitytitle"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/vs_regno"
        android:layout_below="@+id/vs_ownername"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"/>

    <Button android:id="@+id/vs_bd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs_bd"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/vs_regno"/>

    <TableLayout
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="2"
        android:layout_below="@id/vs_regno"
        android:layout_centerHorizontal="true">
        <TableRow
            android:id="@+id/vs_row1">
            <Button android:layout_weight=".5"
                android:id="@+id/vs_rc"
                android:text="@string/vs_rc"
                android:textColor="@color/abc_primary_text_disable_only_material_light"/>
            <TextView android:layout_weight=".5"
                android:id="@+id/vs_rceor"
                android:textSize="15dp"/>
        </TableRow>
        <TableRow android:id="@+id/vs_row2">
            <Button android:layout_weight=".5"
                android:id="@+id/vs_pc"
                android:textColor="@color/abc_primary_text_disable_only_material_light"
                android:text="@string/vs_pc"/>
            <TextView android:layout_weight=".5"
                android:id="@+id/vs_pcdoe"
                android:textSize="15dp"/>
        </TableRow>
        <TableRow android:id="@+id/vs_row3">
            <Button android:layout_weight=".5"
                android:id="@+id/vs_ic"
                android:text="@string/vs_ic"
                android:textColor="@color/abc_primary_text_disable_only_material_light"/>
            <TextView android:layout_weight=".5"
                android:id="@+id/vs_icdoe"
                android:textSize="15dp"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>
