<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/app_title"/>

    <Button
        android:id="@+id/main_scanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/main_title"
        android:text="@string/main_scanbutton"
        android:layout_marginTop="20px"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_aaduid"
        android:layout_below="@+id/main_scanBtn"
        android:hint="@string/main_textfield"
        android:layout_centerHorizontal="true"
        android:textAlignment="gravity"
        android:gravity="center"/>
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_searchBtn"
        android:layout_below="@+id/main_aaduid"
        android:text="@string/main_searchbutton"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
